<resources>
    <string name="app_name">Auction System</string>
    <string name="login">Login</string>
    <string name="navigate_to_login">Navigate to login</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_username">Enter Username</string>
    <string name="enter_name">Enter Name</string>

    <!-- Errors -->
    <string name="name_length_invalid_error">Name must have at least 5 characters</string>
    <string name="username_length_invalid_error">Username must have at least 5 characters</string>
    <string name="password_length_invalid_error">Password must have at least 5 characters</string>
    <string name="user_exists_error">User already exists</string>
    <string name="invalid_credentials_error">Username or Password is invalid</string>

    <string name="item_name">Item Name : &#160;</string>
    <string name="description">Description : &#160;</string>
    <string name="sold_by">Sold By : &#160;</string>
    <string name="minimum_bid_amount">Minimum Bid Amount : &#160;</string>
    <string name="bid_winner_amount_message">Won at amount : &#160;</string>
    <string name="winner">Winner : &#160;</string>
    <string name="enter_item_name">Enter Item Name</string>
    <string name="enter_item_description">Enter Item Description</string>
    <string name="minimum_amount_for_bidding">Minimum Amount For Bidding</string>
    <string name="target_amount_message">If user bids for amount more than or equal to target amount, user will
    be declared as winner.</string>
    <string name="enter_target_amount">Enter Target Amount</string>
    <string name="submit_item">Submit Item</string>
    <string name="invalid_target_amount">Target Amount is invalid</string>
    <string name="minimum_amount_invalid">Minimum Amount is Invalid. Should be number and greater than 0</string>
    <string name="description_invalid_error">Description must have atleast 5 characters</string>
    <string name="name_invalid_error">Name must have atleast 5 characters</string>
    <string name="enter_bid_amount">Enter Bid Amount</string>
    <string name="minimum_amount_required_text">Minimum Amount Required For Bidding is : </string>
    <string name="submit_bid">Submit Bid</string>
    <string name="bid_amount_invalid_error">Please Enter valid Bid Amount Value</string>
    <string name="bid_amount_less_than_minimum_amount_error">Bid Amount is less than minimum bid amount</string>
    <string name="sold">Sold</string>
    <string name="bidder_name">Bidder Name</string>
    <string name="bid_amount">Bid Amount</string>
    <string name="declare_as_winner">Declare As Winner</string>
    <string name="signup">Signup</string>
    <string name="no_items_available_for_auction">No Items available for Auction Now</string>
    <string name="items_available_for_auction">Items Available for Auction</string>
    <string name="logout">Logout</string>
    <string name="view_items_in_auction">View Items in Auction</string>
    <string name="submitted_items_in_auction">Submitted Items In Auction</string>
    <string name="no_items_submitted_for_auction">You have not submitted any items for auction. \n Press Add to add new item.</string>
    <string name="add_item">Add Item</string>
    <string name="item_added_success_message">Item is added successfully</string>
    <string name="bids_placed">Bids Placed</string>
    <string name="place_bid">Place Bid</string>
    <string name="no_bids_placed">No Bids placed so far on selected item</string>

    <string name="bid_added_success_message">Bid is added successfully</string>
    <string name="view_placed_bids">View Placed Bids</string>
    <string name="placed_bids_by_users">Placed bids by users</string>
    <string name="target_amount_less_than_minimum_amount_error">Target Amount should not be less than minimum amount</string>
    <string name="bid_winner_message">Bid declared as winner</string>
    <string name="my_bids">My Bids</string>
    <string name="you_have_won_this_auction">You have won this auction</string>
    <string name="no_bid_by_user">You have not placed any bid on any item</string>
    <string name="view_my_bids">View My Bids</string>
    <string name="item_description">Item Description :</string>
    <string name="sign_up">Sign up</string>
    <string name="you_cannot_bid_on_your_item_error">You cannot bid on your item</string>
</resources>
