<?xml version="1.0" encoding="utf-8"?>


<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/ten_dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/ten_dp">

        <TextView
            android:id="@+id/bidder_name_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/ten_dp"
            android:text="@string/bidder_name" />

        <TextView
            android:id="@+id/bid_amount_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/ten_dp"
            android:text="@string/bid_amount" />


        <ImageView
            android:id="@+id/declare_win_imageview"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_declare_winner"
            android:tint="@color/colorPrimary" />

        <TextView
            android:id="@+id/winner_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginTop="@dimen/ten_dp"
            android:text="@string/winner"
            android:visibility="gone" />
    </RelativeLayout>
</android.support.v7.widget.CardView>